WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211826
REGRESSION (
r261254
): Broke Apple Pay on macOS
https://bugs.webkit.org/show_bug.cgi?id=211826
Summary
REGRESSION (r261254): Broke Apple Pay on macOS
Chris Dumez
Reported
2020-05-12 18:57:50 PDT
r261254
broke Apple Pay on macOS.
Attachments
Patch
(7.96 KB, patch)
2020-05-12 19:00 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-05-12 18:58:53 PDT
<
rdar://problem/63161750
>
Chris Dumez
Comment 2
2020-05-12 19:00:57 PDT
Created
attachment 399225
[details]
Patch
EWS
Comment 3
2020-05-13 09:02:36 PDT
Committed
r261617
: <
https://trac.webkit.org/changeset/261617
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 399225
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug