REGRESSION (r261254): Broke Apple Pay on macOS https://bugs.webkit.org/show_bug.cgi?id=211826 <rdar://problem/63161750>

Reviewed by Alex Christensen.

r261254 dropped the code needed to add the WebPaymentCoordinatorProxy as an IPC message receiver.
This patch re-introduces the code in order to address the regression.

No new tests, tested manually on https://applepaydemo.apple.com.

* NetworkProcess/NetworkConnectionToWebProcess.h:
* NetworkProcess/ios/NetworkConnectionToWebProcessIOS.mm:
(WebKit::NetworkConnectionToWebProcess::paymentCoordinatorAddMessageReceiver):
(WebKit::NetworkConnectionToWebProcess::paymentCoordinatorRemoveMessageReceiver):
* Shared/ApplePay/WebPaymentCoordinatorProxy.h:
* Shared/ApplePay/cocoa/WebPaymentCoordinatorProxyCocoa.mm:
(WebKit::WebPaymentCoordinatorProxy::WebPaymentCoordinatorProxy):
(WebKit::WebPaymentCoordinatorProxy::~WebPaymentCoordinatorProxy):
* UIProcess/Cocoa/WebPageProxyCocoa.mm:
(WebKit::WebPageProxy::paymentCoordinatorAddMessageReceiver):
(WebKit::WebPageProxy::paymentCoordinatorRemoveMessageReceiver):
* UIProcess/WebPageProxy.h:


Canonical link: https://commits.webkit.org/224726@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261617 268f45cc-cd09-0410-ab3c-d52691b4dbfc